<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:stretchColumns="1"
    tools:context="pine.app.Register"
    android:background="@mipmap/orangegradient">

    <TableRow>
        <TextView
            android:text="@string/firstname"
            android:layout_marginTop="50dp"
            android:textColor="@color/bottomGradientBlue"/>
        <EditText
            android:id="@+id/eFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/roundedittext"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/surname"
            android:textColor="@color/bottomGradientBlue"/>
        <EditText
            android:id="@+id/eSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/roundedittext"/>
        </TableRow>
    <TableRow>
        <TextView
            android:text="@string/username"
            android:textColor="@color/bottomGradientBlue"/>
        <EditText
            android:id="@+id/eUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/roundedittext"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/email"
            android:textColor="@color/bottomGradientBlue"/>
        <EditText
            android:id="@+id/eMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/roundedittext"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/password"
            android:textColor="@color/bottomGradientBlue"/>
        <EditText
            android:id="@+id/ePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/roundedittext"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/bCancel"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:onClick="Cancel"
            android:text="@string/cancel"
            android:textColor="@color/bottomGradientBlue"
            android:background="@color/upperGradientOrange"/>

        <Button
            android:id="@+id/bRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/upperGradientOrange"
            android:onClick="Register"
            android:text="@string/register"
            android:textColor="@color/bottomGradientBlue" />
    </TableRow>


</TableLayout>
