<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pine.app.Newpost">

    <EditText
        android:id="@+id/eTitle"
        android:layout_width="306dp"
        android:layout_height="30dp"
        android:ems="10"
        android:hint="@string/PostTitle"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/postinput"
        app:layout_constraintVertical_bias="0.987"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/eDescription" />

    <EditText
        android:id="@+id/eDescription"
        android:layout_width="306dp"
        android:layout_height="95dp"
        android:ems="10"
        android:hint="@string/PostDesc"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982"
        android:background="@drawable/postinput"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cDrink" />

    <Button
        android:id="@+id/bPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AddPicture"
        android:text="@string/AddPic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/bSendpost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SendPost"
        android:text="@string/SendPic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.802"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/eDescription" />

    <ImageView
        android:id="@+id/Imageprev"
        android:layout_width="367dp"
        android:layout_height="212dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintVertical_bias="0.727"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/eTitle" />

    <CheckBox
        android:id="@+id/cfood"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:text="@string/SelectFodd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/cDrink"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:text="@string/SelectDrink"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cfood" />

</android.support.constraint.ConstraintLayout>
